--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -200,4 +200,6 @@
     <string name="error_form_passport_invalid">พาสปอร์ตไม่ถูกต้อง</string>
     <string name="error_form_name_en">Invalid name</string>
     <string name="error_verify_otp_time_out">ขออภัยการเชื่อมต่อผิดพลาด</string>
+    <string name="delivery">การจัดส่ง</string>
+    <string name="select_store_title">เลือกสาขาที่ต้องการรับสินค้า</string>
 </resources>
