Improved store detail fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -202,4 +202,8 @@
     <string name="error_verify_otp_time_out">ขออภัยการเชื่อมต่อผิดพลาด</string>
     <string name="delivery">การจัดส่ง</string>
     <string name="select_store_title">เลือกสาขาที่ต้องการรับสินค้า</string>
+    <string name="store_address">ที่อยู่สาขา</string>
+    <string name="telephone_number">หมายเลขโทรศัพท์</string>
+    <string name="store_open">เปิดทำการ</string>
+    <string name="choose_store">เลือกสาขานี้</string>
 </resources>
