--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -208,4 +208,7 @@
     <string name="store_open">เปิดทำการ</string>
     <string name="choose_store">เลือกสาขานี้</string>
     <string name="please_select_store">กรุณาเลือกสาขาที่ต้องการ</string>
+    <string name="select_date_delivery">กำหนดวันจัดส่งสินค้า</string>
+    <string name="date">วันที่</string>
+    <string name="time">เวลา</string>
 </resources>
