--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -188,6 +188,8 @@
     <string name="please_select_date">กรุณาเลือกวันที่คุณต้องการ</string>
     <string name="check_your_date">กรุณาตรวจสอบวันที่เลือก</string>
     <string name="choose_delivery_option">เลือกการจัดส่งสินค้า</string>
+    <string name="add_over_qty">สินค้าไม่เพียงพอ</string>
+    <string name="title_free_item">ฟรีของแถม</string>
 
     <!-- Error -->
     <string name="error_form_empty_data">กรุณากรอกข้อมูลสำคัญของคุณ</string>
@@ -213,5 +215,5 @@
     <string name="time">เวลา</string>
     <string name="please_select_date_and_time">กรุณาเลือกวันและเวลาในการจัดส่งสินค้า</string>
     <string name="please_try_again">กรุณาลองใหม่อีกครั้ง</string>
-    <string name="add_over_qty">สินค้าไม่เพียงพอ</string>
+
 </resources>
