--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -215,5 +215,6 @@
     <string name="time">เวลา</string>
     <string name="please_select_date_and_time">กรุณาเลือกวันและเวลาในการจัดส่งสินค้า</string>
     <string name="please_try_again">กรุณาลองใหม่อีกครั้ง</string>
+    <string name="select_option_delivery">เลือกการจัดส่ง</string>
 
 </resources>
