--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -216,5 +216,9 @@
     <string name="please_select_date_and_time">กรุณาเลือกวันและเวลาในการจัดส่งสินค้า</string>
     <string name="please_try_again">กรุณาลองใหม่อีกครั้ง</string>
     <string name="select_option_delivery">เลือกการจัดส่ง</string>
+    <string name="same_billing">ที่อยู่จัดส่งสินค้า เป็นที่อยู่เดียวกันกับที่อยู่ในการเรียกเก็บเงิน</string>
+    <string name="shipping_address">ที่อยู่จัดส่งสินค้า</string>
+    <string name="select_shipping_dialog">เลือกจัดส่งตามที่อยู่</string>
+    <string name="select_store_dialog">เลือกรับที่สาขา</string>
 
 </resources>
