--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -220,5 +220,6 @@
     <string name="shipping_address">ที่อยู่จัดส่งสินค้า</string>
     <string name="select_shipping_dialog">เลือกจัดส่งตามที่อยู่</string>
     <string name="select_store_dialog">เลือกรับที่สาขา</string>
+    <string name="title_clear_cart">เราเจอปัญหากับตะกร้าสินค้านี้ (จำเป็นต้องลบตะกร้า)</string>
 
 </resources>
