--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -192,6 +192,7 @@
     <string name="choose_delivery_option">เลือกการจัดส่งสินค้า</string>
     <string name="add_over_qty">สินค้าไม่เพียงพอ</string>
     <string name="title_free_item">ฟรีของแถม</string>
+    <string name="shopping_delete"><u>ลบ</u></string>
 
     <!-- Error -->
     <string name="error_form_empty_data">กรุณากรอกข้อมูลสำคัญของคุณ</string>
