--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -151,6 +151,9 @@
     <string name="branch">สาขา</string>
     <string name="search_not_found">ไม่พบข้อมูลที่ค้นหา</string>
     <string name="product_price">ราคา:</string>
+    <string name="label_billing_address">ใบกำกับภาษี/ที่อยู่</string>
+    <string name="label_shipping_type">บริการจัดส่ง</string>
+    <string name="label_delivery_info">วิธีการจัดส่ง</string>
 
     <!-- Shared Preference -->
     <string name="preference_file_name">pwb_app_preference</string>
@@ -178,7 +181,8 @@
     <string name="history">ประวัติ</string>
     <string name="not_found_data">ไม่พบข้อมูล</string>
     <string name="not_have_data">ไม่มีข้อมูล</string>
-    <string name="name_user_order">ชื่อผู้ใช้: </string>
+    <string name="name_user_order">ชื่อลูกค้า: </string>
+    <string name="receiver_name">ชื่อผู้รับ: </string>
     <string name="order_date_history">วันที่สั่งซื้อ: </string>
     <string name="product">สินค้า</string>
     <string name="sort">เรียง</string>
