--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,7 +73,7 @@
     <string name="drawer_delivery" translatable="false">Delivery Schedule</string>
     <string name="drawer_compare" translatable="false">เปรียบเทียบสินค้า</string>
     <string name="drawer_change" translatable="false">เปลี่ยนภาษา</string>
-    <string name="drawer_cart" translatable="false">ตะกร้า</string>
+    <string name="drawer_cart" translatable="false">รถเข็น</string>
     <string name="drawer_history" translatable="false">ประวัติการสร้างรายการ</string>
     <string name="drawer_help" translatable="false">ช่วยเหลือ</string>
 
@@ -157,10 +157,10 @@
 
     <!-- Shared Preference -->
     <string name="preference_file_name">pwb_app_preference</string>
-    <string name="added_to_cart">สินค้านี้ถูกเพิ่มลงตะกร้าแล้ว</string>
+    <string name="added_to_cart">สินค้านี้ถูกเพิ่มลงรถเข็นแล้ว</string>
 
     <!-- Cart -->
-    <string name="title_confirm_delete_item">คุณต้องการลบสินค้าชิ้นนี้ออกจากตะกร้า?</string>
+    <string name="title_confirm_delete_item">คุณต้องการลบสินค้าชิ้นนี้ออกจากรถเข็น?</string>
     <string name="yes">ใช่</string>
     <string name="no">ไม่ใช่</string>
     <string name="format_header_cart_items">รถเข็นของคุณ(%s ชิ้น)</string>
@@ -174,8 +174,8 @@
     <string name="confrim_oder">ยืนยันการซื้อสินค้า</string>
     <string name="ok_alert">ตกลง</string>
     <string name="cancel_alert">ยกเลิก</string>
-    <string name="cannot_get_cart_item">ไม่สามารถเรียกสินค้าในตะกร้าได้</string>
-    <string name="not_have_products_in_cart">ไม่มีสินค้าอยู่ในตะกร้า กรุณาเพิ่มสิาค้าที่ท่านต้องการ</string>
+    <string name="cannot_get_cart_item">ไม่สามารถเรียกสินค้าในรถเข็นได้</string>
+    <string name="not_have_products_in_cart">ไม่มีสินค้าอยู่ในรถเข็น กรุณาเพิ่มสินค้าที่ท่านต้องการ</string>
     <string name="not_have_user">ไม่มีผู้ใช้ในระบบ ต้องการที่จะข้ามขั้นตอนนี้หรือไม่</string>
     <string name="choose">เลือก</string>
     <string name="history">ประวัติ</string>
@@ -227,7 +227,7 @@
     <string name="shipping_address">ที่อยู่จัดส่งสินค้า</string>
     <string name="select_shipping_dialog">เลือกจัดส่งตามที่อยู่</string>
     <string name="select_store_dialog">เลือกรับที่สาขา</string>
-    <string name="title_clear_cart">เราเจอปัญหากับตะกร้าสินค้านี้ (จำเป็นต้องลบตะกร้า)</string>
+    <string name="title_clear_cart">เราเจอปัญหากับรถเข็นนี้ (จำเป็นต้องลบรถเข็น)</string>
     <string name="developing_system_compare">กำลังพัฒนาระบบ ไม่สามารถเปรียบเทียบสินค้าในขณะนี้</string>
     <string name="freebie_promotion_not_found">โปรดเช็คโปรโมชั่นและของแถมเมื่อใส่สินค้าลงรถเข็น</string>
     <string name="not_have_day_to_delivery">ไม่มีวันจัดส่ง</string>
