create switch button for support switch language

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <!--<string name="app_name">PowerBuy Store</string>-->
 
-    <string name="home" translatable="false">หน้าหลัก</string>
+    <string name="home" >Home</string>
     <string name="home_tv" translatable="false">TV &amp; Home Entertainment</string>
     <string name="home_app" translatable="false">Home Appliances</string>
     <string name="home_cooling" translatable="false">Cooling &amp; Heating</string>
@@ -253,9 +253,13 @@
     <string name="staff_descriptions_dialog">1. พาลูกค้าไปที่แคชเชียร์\n2. แสดงหน้าจอนี้ต่อแคชเชียร์ - ผู้ทำการรับเงิน\n3. เมื่อชำระเงินสำเร็จ ให้แคชเชียร์/เจ้าหน้าที่ ไปยังรายการสั่งซื้อในระบบหลังบ้าน\n4. ปรับ status ในระบบเป็น Payment Success</string>
     <string name="product_not_have_delivery">สินค้านี้ไม่มีการจัดส่งแบบติดตั้งที่บ้าน</string>
     <string name="cannot_get_shipping_slot">ไม่สามารถเรียกข้อมูลได้</string>
-    <!-- Network state-->
+    <!-- Network state -->
     <string name="network_connect_error">ไม่มีอินเทอร์เน็ต</string>
     <string name="network_state_connected">เชื่อมต่อแล้ว</string>
     <string name="network_state_connecting">กำลังเชื่อมต่ออินเทอร์เน็ต</string>
     <string name="network_disconnected">ไม่ได้เชื่อมต่ออินเทอร์เน็ต</string>
+
+    <!-- Language -->
+    <string name="hint_th">TH</string>
+    <string name="hint_en">EN</string>
 </resources>
